src/css/styles.css
/* ... */
#groups-menu-filter .filter-bubble .filter-remove:before {
  padding-right: 3px;
}

#groups-menu-filter .filter-bubble .filter-text {
  vertical-align: text-bottom;
}

.project-info-text-field-area label {
  margin: 0 !important;
}

.project-info-text-field-area .project-info-text-field {
  height: auto !important;
  font-weight: normal !important;
  display: block !important;
}

.project-info-text-field-area .project-info-text-field hr {
  position: initial !important;
}

.project-details-table {
  display: flex;
  flex-wrap: wrap;
}

@media (max-width: 1199px) {
  .project-details-table {
    margin: 0 auto !important;
    width: auto !important;
  }

  .project-details-table .project-details-column {
    flex: none !important;
    margin: 0 auto !important;
  }

  .project-details-table .project-details-item {
    float: none !important;
  }
}

.project-details-table .project-details-column {
  flex: 1 1 40%;
  margin: 5px;
  min-width: 260px;
}

.project-details-table .project-details-left-column .project-details-item {
  display: block !important;
  float: right;
}

.project-details-table .project-details-right-column .project-details-item {
  display: block !important;
  float: left;
}

.project-details-table .project-details-item label {
  display: block;
  margin: 0 0 10px 0 !important;
}

.project-details-table .language-name-textbox {
  display: block;
}

.project-details-table .language-id-textbox {
  display: block;
}

.project-details-table .text-prompt > div {
  display: block !important;
}

.project-details-table .contributor-area, .project-details-table .checkers-area {
  min-width: 256px;
  margin-top: 15px;
}

.project-details-table .required {
  color: #cd0033;
}

.project-details-table .required:after {
  content: '*';
  color: #cd0033;
}

.project-details-table .select-field {
  margin-top: 20px;
}

.project-details-table .select-field input {
  height: auto !important;
}

.project-details-table .select-field hr {
  bottom: inherit !important;
}

.project-details-table .select-field div {
  height: auto !important;
  line-height: 16px !important;
}

.project-details-table .select-field > div,
.project-details-table .select-field > div > div {
  height: 16px !important;
}

.project-details-table .select-field button {
  padding: 0 !important;
  height: auto !important;
  top: -5px !important;
}

